# s21_3DViewer_v2.0

./: README.md
src/: CMakeLists.txt  Makefile  documentation.md
src/Controller/: s21_controller.cc  s21_controller.h
src/Model/: s21_joystick.cc  s21_joystick.h  s21_myglwidget.cc  s21_myglwidget.h  s21_objparser.cc  s21_objparser.h  s21_settings.cc  s21_settings.h  s21_transformation.cc  s21_transformation.h
src/Tests/: CMakeLists.txt  s21_objparser_test.cc  s21_transformation_test.cc
src/View/: main.cc
src/View/MainWindow/: s21_mainwindow.cc  s21_mainwindow.h  s21_mainwindow.ui
